--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,8 @@ include:
   - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
+kramdown:
+  input: GFM
+markdown: redcarpet
+redcarpet:
+  extensions: ["tables", "fenced_code_blocks"]
