--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ include:
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
 kramdown:
+  parse_block_html: true
   input: GFM
 markdown: redcarpet
 redcarpet:
